Prevent tap highlight on mobile

--- a/src/styles/tags.styl
+++ b/src/styles/tags.styl
@@ -8,6 +8,7 @@ html, body
   font-family 'Lato Light'
   outline 0px
   text-rendering optimizeLegibility
+  -webkit-tap-highlight-color rgba(0, 0, 0, 0)
 
 h1, h2, h3, h4, h5, h6
   margin 0px
